--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   avatar           : "https://avatars.githubusercontent.com/u/128462625?v=4"
   bio              : "Welcome To My Study Blog"
   #location         : "Korea"
-  email            :
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -291,3 +291,4 @@ defaults:
       share: true
       related: true
       show_date: true
+      sidebar_main: true
