fix categories page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Home"
     url: https://arisuiscute.github.io/
+  - title: "Categories"
+    urtl: "https://arisuiscute.github.io/categories/"
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
