Create Side Bar

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Arisu-Is-Cute's git blog"
+title                    : "My Study Git Blog ♫"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "ArisuIsCute"
@@ -291,3 +291,4 @@ defaults:
       share: true
       related: true
       show_date: true
+      sidebar_main: true
