--- a/_config.yml
+++ b/_config.yml
@@ -104,9 +104,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "텐도 아리수"
+  name             : "공부하는 아리수"
   avatar           : "https://avatars.githubusercontent.com/u/128462625?v=4"
-  bio              : "Welcome To My Study Blog"
+  bio              : "Welcome To My Study Blog!"
   #location         : "Korea"
   email            : 
   links:
